force-app/main/default/objects/cmc_sw_product__c/cmc_sw_product__c.object-meta.xml
<CustomObject>
    <label>CMC SW Product</label>
    <nameField>
        <label>CMC SW Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMC SW Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>