force-app/main/default/objects/cmc_sw_product__c/fields/aloha_mobile_version__c.field-meta.xml
<CustomField>
    <fullName>aloha_mobile_version__c</fullName>
    <label>Aloha Mobile Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>