force-app/main/default/objects/cmc_sw_product__c/fields/atg__c.field-meta.xml
<CustomField>
    <fullName>atg__c</fullName>
    <label>ATG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>