force-app/main/default/objects/cmc_sw_product__c/fields/ato__c.field-meta.xml
<CustomField>
    <fullName>ato__c</fullName>
    <label>ATO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>