force-app/main/default/objects/cmc_sw_product__c/fields/cmc_agent__c.field-meta.xml
<CustomField>
    <fullName>cmc_agent__c</fullName>
    <label>CMC Agent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>