force-app/main/default/objects/cmc_sw_product__c/fields/company_name__c.field-meta.xml
<CustomField>
    <fullName>company_name__c</fullName>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>