force-app/main/default/objects/cmc_sw_product__c/fields/keyid__c.field-meta.xml
<CustomField>
    <fullName>keyid__c</fullName>
    <label>Key Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>