force-app/main/default/objects/cmc_sw_product__c/fields/order_point_version__c.field-meta.xml
<CustomField>
    <fullName>order_point_version__c</fullName>
    <label>Order Point Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>