force-app/main/default/objects/cmc_sw_product__c/fields/ral__c.field-meta.xml
<CustomField>
    <fullName>ral__c</fullName>
    <label>RAL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>