force-app/main/default/objects/cmc_sw_product__c/fields/sql_express_version__c.field-meta.xml
<CustomField>
    <fullName>sql_express_version__c</fullName>
    <label>SQL Express Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>