force-app/main/default/objects/cmc_sw_product__c/fields/store_id__c.field-meta.xml
<CustomField>
    <fullName>store_id__c</fullName>
    <label>Store Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>